# comfyui-imgutils

./: LICENSE  README.md  __init__.py  node_align.py  node_bbox.py  node_cdc.py  node_censor.py  node_compare.py  node_describe.py  node_detect.py  node_ocr.py  node_pose.py  node_segment.py  node_squeeze.py  node_tagging.py  node_transform.py  node_validate.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: publish_action.yml
_shared/: __init__.py  bases.py  formatting.py  tensor.py
compare/: __init__.py  _distance.py  node_ccip.py  node_lpips.py
detect/: __init__.py  node_detect.py  node_ocr.py
edge/: __init__.py  node_canny.py  node_lineart.py  node_lineart_anime.py
judge/: __init__.py  node_check.py  node_classify.py  node_metric.py
pose/: __init__.py  node_pose.py
restore/: __init__.py  node_adversarial.py  node_nafnet.py  node_scunet.py
segment/: __init__.py  node_segment.py
subgraphs/: AI Image Detector.json  Anime Classifier.json  Anime Lineart.json  Anime Tag & Filter.json  Auto-Crop.json  Canny Edge Detection.json  Character Segmentation.json  Compare Images (CCIP).json  Content Censor.json  Face Detect & Crop.json  NSFW Check.json  OCR Text Detection.json  Pose Estimation.json  Restore & Upscale.json  Safety Check.json  Upscale (CDC).json
tagging/: __init__.py  _base.py  node_camie.py  node_deepdanbooru.py  node_deepgelbooru.py  node_mldanbooru.py  node_pixai.py  node_tags.py  node_wd14.py
transform/: __init__.py  node_align.py  node_cdc.py  node_censor.py  node_squeeze.py
utility/: __init__.py  node_bbox.py  node_bbox_crop.py  node_bbox_mask.py  node_bool_logic.py  node_contains.py  node_dedup.py  node_json_filter.py  node_score_threshold.py
validate/: node_check.py  node_classify.py  node_metric.py
