[project]
name = "comfyui-imgutils"
version = "0.1.0"
description = "26 ComfyUI V2 nodes wrapping deepghs/imgutils — anime image tagging, classification, edge detection, restoration, upscaling, OCR, pose estimation, segmentation, and comparison."
readme = "README.md"
authors = [
    { name = "imgutils_nodes contributors" }
]
license = { file = "LICENSE" }
dependencies = [
    "dghs-imgutils[gpu]>=0.19.0",
]
requires-python = ">=3.10"
keywords = ["comfyui", "anime", "tagging", "detection", "pose", "segmentation", "imgutils"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/xiaden/comfyui-imgutils"

[tool.comfy]
PublisherId = "imgutils"
DisplayName = "ImgUtils Nodes"
Icon = ""
requires-comfyui = ">=0.3.0"
