[project]
name = "comfyui-imgutils"
version = "0.0.2"
description = "ComfyUI V3 nodes wrapping deepghs/imgutils for anime image analysis and processing."
readme = "README.md"
authors = [
    { name = "xiaden" }
]
license = { file = "LICENSE" }
dependencies = [
    "dghs-imgutils[gpu]>=0.19.0",
]
requires-python = ">=3.10"
keywords = ["comfyui", "anime", "tagging", "detection", "pose", "segmentation", "imgutils"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/xiaden/comfyui-imgutils"

[tool.comfy]
PublisherId = "xiaden"
DisplayName = "imgutils"
Icon = ""
requires-comfyui = ">=0.25.0"
